<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belanosima"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textColor="@color/text_cyan"
            android:textSize="36dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/event_poster"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/testposter"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            app:layout_goneMarginTop="0dp" />

        <TextView
            android:id="@+id/no_poster_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_poster"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginTop="10dp" />

        <TextView
            android:id="@+id/event_date_time"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Start Date to End Date At Time"
            android:textColor="@color/text_cyan"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_poster"
            app:layout_goneMarginTop="0dp" />

        <TextView
            android:id="@+id/event_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeats: Mon, Tue, Fri"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_date_time"
            android:fontFamily="@font/aleo_medium"/>


        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="@string/ccis_university_of_alberta"
            android:textColor="@color/text_cyan"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_repeat"
            android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/event_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Details"
        android:textColor="@color/text_cyan"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_location"
        android:fontFamily="@font/aleo_medium"/>

    <TextView
        android:id="@+id/event_waiting_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aleo_medium"
        android:text="Waiting List: 9/10"
        android:textColor="@color/text_cyan"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_details"
        android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/event_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Current Status: Accepting Entries"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_waiting_list"
            app:layout_goneMarginTop="5dp" />

        <TextView
            android:id="@+id/event_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Registration Period: Start to End"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_status"
            app:layout_goneMarginTop="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_registration">

        <TextView
            android:id="@+id/geoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anybody"
            android:text="@string/loc_confirm"
            android:textAlignment="center"
            android:textColor="@color/accent_pink"
            android:textSize="14dp"/>

        <CheckBox
            android:id="@+id/location_sharing_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/accent_pink" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/register_for_lottery_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/register_for_lottery"
            android:textColor="@color/text_cyan"
            android:textSize="18dp" />

        <Switch
            android:id="@+id/lottery_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:thumbTint="@color/bonus_yellow"
            android:trackTint="@color/bonus_yellow"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <Button
        android:id="@+id/event_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/belanosima" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
