<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home" >
<!--    app:startDestination="@id/nav_myevents">-->



     <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myevents"
        android:name="com.example.myapplication.ui.myevents.MyEventsFragment"
        android:label="@string/menu_myevents"
        tools:layout="@layout/fragment_myevents" />

    <fragment
        android:id="@+id/nav_registered"
        android:name="com.example.myapplication.ui.registeredevents.RegisteredEventFragment"
        android:label="@string/menu_enteredevents"
        tools:layout="@layout/fragment_registered_events" />

    <fragment
        android:id="@id/nav_profile"
        android:name="com.example.myapplication.ui.user_profile.MyProfileFragment"
        android:label="Your Profile"
        tools:layout="@layout/fragment_my_profile"/>

    <fragment
        android:id="@id/nav_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications"/>

    <fragment
        android:id="@id/nav_admin"
        android:name="com.example.myapplication.ui.admin.AdminFragment"
        android:label="App Management"
        tools:layout="@layout/fragment_admin"/>

    <fragment
        android:id="@+id/adminProfileFragment"
        android:name="com.example.myapplication.ui.admin.AdminProfileFragment"
        android:label="Admin Profile"
        tools:layout="@layout/item_admin_profile" />
    <fragment
        android:id="@+id/adminEventFragment"
        android:name="com.example.myapplication.ui.admin.AdminEventsFragment"
        android:label="Admin All Events"
        tools:layout="@layout/item_admin_profile" />
    <fragment
        android:id="@+id/adminPhotoFragment"
        android:name="com.example.myapplication.ui.admin.AdminPhotosFragment"
        android:label="Admin All Photos"
        tools:layout="@layout/item_admin_profile" />

    <fragment
        android:id="@+id/nav_qr_fragment"
        android:name="com.example.myapplication.ui.registeredevents.QRFragment"
        android:label="QR Scanner"
        tools:layout="@layout/qr_scanner" />

    <fragment
        android:id="@+id/nav_add_events"
        android:name="com.example.myapplication.ui.myevents.AddEventsFragment"
        android:label="Add Events Fragment"
        tools:layout="@layout/org_create_new_event">
    </fragment>

    <fragment
        android:id="@+id/nav_edit_event_details"
        android:name="com.example.myapplication.ui.myevents.editEvent.EditEventPosterDetailsFragment"
        android:label="Edit Event Poster and Details"
        tools:layout="@layout/org_create_new_event">
    </fragment>

    <fragment
        android:id="@+id/nav_edit_event"
        android:name="com.example.myapplication.ui.myevents.editEvent.EditEventFragment"
        android:label="Edit and View event"
        tools:layout="@layout/view_event_organizer">
    </fragment>

    <fragment
        android:id="@+id/nav_manage_event"
        android:name="com.example.myapplication.ui.myevents.manageEvent.ManageEventFragment"
        android:label="Event Details"
        tools:layout="@layout/org_manage_event">
    </fragment>

    <fragment
        android:id="@+id/nav_view_scanned_event"
        android:name="com.example.myapplication.ui.registeredevents.ViewScannedEventFragment"
        android:label="Scanned Event"
        tools:layout="@layout/view_event_user">
    </fragment>


    <fragment
        android:id="@id/nav_metrics"
        android:name="com.example.myapplication.ui.metrics.MetricsFragment"
        android:label="User Metrics"
        tools:layout="@layout/fragment_notifications"/>

</navigation>