<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belanosima"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textColor="@color/text_cyan"
            android:textSize="36dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/event_poster"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/testposter"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            app:layout_goneMarginTop="0dp" />

        <TextView
            android:id="@+id/no_poster_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_poster"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginTop="10dp" />

        <TextView
            android:id="@+id/event_date_time"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Start Date to End Date At Time"
            android:textColor="@color/text_cyan"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_poster"
            app:layout_goneMarginTop="0dp" />

        <TextView
            android:id="@+id/event_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeats: Mon, Tue, Fri"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_date_time"
            android:fontFamily="@font/aleo_medium"/>


        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="@string/ccis_university_of_alberta"
            android:textColor="@color/text_cyan"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_repeat"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/event_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Details"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_location"
            android:fontFamily="@font/aleo_medium"/>

        <TextView
            android:id="@+id/event_waiting_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Current Participants: 33/45"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_details"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/event_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_medium"
            android:text="Current Status: Selected"
            android:textColor="@color/text_cyan"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_waiting_list"
            app:layout_goneMarginTop="5dp" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_status"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/accept_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belanosima"
            android:text="Accept"
            android:layout_marginLeft="20dp"
            android:background="@drawable/mybutton"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/decline_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belanosima"
            android:text="Decline"
            android:layout_marginRight="20dp"
            android:background="@drawable/mybutton"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>